# sqlrelay

./: AUTHORS  COPYING  ChangeLog  INSTALL  INSTALL.txt  Makefile  NEWS  README  README.md  TODO  aclocal.m4  acsite.m4  autogen.sh  buildspec  config.h.in  config.mk.in  config.sub  config.windows.h  config.windows.mk  config_windows.h  config_windows.mk  configure  configure.in  configure.vbs  cp.vbs  insertparts.pl  ltmain.sh  make.bat  make.batch  makeclean.batch  makeinstall.batch  makeuninstall.batch  mkinstalldirs  mkinstalldirs.vbs  modulerename.sh  reguninstall.vbs  replace.sh  replace.vbs  rm.vbs  rmdir.vbs  (+6 more)
autoconf/: Makefile  acsqlrelay.m4
bench/: Makefile  db2bench.cpp  db2bench.h  firebirdbench.cpp  freetdsbench.cpp  mysqlbench.cpp  oraclebench.cpp  postgresqlbench.cpp  sqlitebench.cpp  sybasebench.cpp
bench/db2/: Makefile  db2test.C
bench/firebird/: Makefile  firebird.cpp
bench/freetds/: Makefile  ctfunctions.h  freetdstest.C  freetdstest.cpp
bench/interbase/: Makefile  interbasetest.C
bench/lago/: Makefile  lagotest.C
bench/msql/: Makefile  msqltest.C
bench/mysql/: Makefile  mysqltest.C
bench/odbc/: Makefile  iodbc.c  odbctest.C  odbctest.cpp  unixodbc.c
bench/oracle7/: Makefile  ora7test.C
bench/oracle8/: Makefile  inserttest.cpp  ora8clobtest.cpp  ora8test.C  ora8test.cpp
bench/postgresql/: Makefile  postgresqltest.C
bench/sqlite/: Makefile  sqlitetest.C  sqlitetest.cpp
bench/sqlrelay/: Makefile  inserttest.cpp  sqlrtest.C
bench/stats/: Makefile  bench.cpp  bench.h  db2bench.cpp  db2bench.h  firebirdbench.cpp  firebirdbench.h  main.cpp  mysqlbench.cpp  mysqlbench.h  oraclebench.cpp  oraclebench.h  postgresqlbench.cpp  postgresqlbench.h  sqlitebench.cpp  sqlrelaybench.cpp  sqlrelaybench.h  sybasebench.cpp  sybasebench.h
bench/sybase/: Makefile  sybasetest.C  sybasetest.cpp
debian/: changelog  control  erlang-sqlrelay.install  java-sqlrelay.install  libmono-sqlrelay.install  node-sqlrelay.install  odbc-sqlrelay.install  perl-dbd-sqlrelay.install  perl-sqlrelay.install  php-pdo-sqlrelay.install  php-sqlrelay.install  python3-db-sqlrelay.install  python3-sqlrelay.install  ruby-sqlrelay.install  rules  sqlrelay-c++-dev.install  sqlrelay-c++.install  sqlrelay-c-dev.install  sqlrelay-c.install  sqlrelay-cachemanager.install  sqlrelay-clients.install  sqlrelay-common-dev.install  sqlrelay-common.install  sqlrelay-db2.install  sqlrelay-doc.install  sqlrelay-dropin-mysql.install  sqlrelay-dropin-postgresql.install  sqlrelay-firebird.install  sqlrelay-freetds.install  sqlrelay-informix.install  sqlrelay-mdbtools.install  sqlrelay-mysql.install  sqlrelay-odbc.install  sqlrelay-oracle.install  sqlrelay-postgresql.install  sqlrelay-router.install  sqlrelay-sap.install  sqlrelay-server-dev.install  sqlrelay-server.install  sqlrelay-sqlite.install  (+3 more)
doc/: Makefile  clientapis.html  configuring.html  connections.html  enterprise.html.in  enterprise.wt  enterprise.wt.in  enterpriseadmin.wt  enterpriseadmin.wt.in  faq.html  faq.wt  index.html  index.wt  installing.html  introduction.html  introtowebdb.html  loadbalfailover.html  oraclentier.html  router.html  running.html  tuning.html  windows.html  xhtml.conf
doc/admin/: Makefile  configguide.html  configguide.html.in  configguide.wt  configreference.html  configreference.html.in  configreference.wt  configure_mysql_frontend.html  configure_mysql_frontend.wt  configuring.html  createtlscert.html  createtlscert.wt  ha.html  insert.pl  installing.html  installing.wt  installingpkg.html  installingpkg.wt  installingpkg.wt.in  loadbalfailover.html  oraclentier.html  oraclentier.wt  prerequisites.html  prerequisites.wt  router.html  router.html.in  router.wt  running.html  running.wt  sqlr-connection-oracletest-querylog.2899.html  sqlr-connection.1871.html  sqlr-listener.1886.html  tlsca.html  tlsca.wt  tlscert.html  tlscert.wt  tuning.html  tuning.wt  xhtml.conf
doc/css/: styles.css
doc/dropin/: Makefile  mysql.html  mysql.wt  postgresql.html  postgresql.wt
doc/features/: Makefile  connectionpooling.html  connectionpooling.wt  databases.html  databases.wt  dbabstractionlayers.html  dbabstractionlayers.wt  dropinreplacementlibs.html  dropinreplacementlibs.wt  ha.html  ha.wt  languages.html  languages.html.in  languages.wt  loadbalancing.html  multirowfetches.html  multirowfetches.wt  nativeprotocol.html  nativeprotocol.wt  platforms.html  proxying.html  proxying.wt  queryfiltering.html  queryfiltering.wt  queryrouting.html  queryrouting.wt  querytranslation.html  querytranslation.wt  resultsetcaching.html  resultsetcaching.wt  schedules.html  schedules.wt  substitutionandbindvars.html  substitutionandbindvars.wt  suspendedtx.html  suspendedtx.wt  throttling.html  throttling.wt
doc/gettingstarted/: access.html  blackray.html  db2.html  firebird.html  interbase.html  lago.html  msde.html  msql.html  mssqlserver.html  mysql.html  odbc.html  oracle.html  (+3 more)
etc/: Makefile  sqlrelay.conf  sqlrelay.conf.example  sqlrelay.dtd  sqlrelay.xsd
init/: Makefile  com.firstworks.sqlrcachemanager.plist.in  com.firstworks.sqlrelay.plist.in  notes  rc.sqlrcachemanager.in  rc.sqlrelay.in  sqlrelay  sqlrelay.service.in  sqlrelaycachemanager.service.in
man/: Makefile
spec/: sqlrelay-c++.spec.in  sqlrelay-c.spec.in  sqlrelay-common.spec.in  sqlrelay-config-gtk.spec.in  sqlrelay-db2.spec.in  sqlrelay-doc.spec.in  sqlrelay-freetds.spec.in  sqlrelay-interbase.spec.in  sqlrelay-java.spec.in  sqlrelay-lago.spec.in  sqlrelay-msql.spec.in  sqlrelay-mysql.spec.in  sqlrelay-odbc.spec.in  sqlrelay-oracle7.spec.in  sqlrelay-oracle8.spec.in  sqlrelay-perl.spec.in  sqlrelay-php.spec.in  sqlrelay-postgresql.spec.in  sqlrelay-python.spec.in  sqlrelay-ruby.spec.in  sqlrelay-sqlite.spec.in  sqlrelay-sybase.spec.in  sqlrelay-zope.spec.in
src/: Makefile
test/: Makefile  firebird.create.sh  interbase.create.sh  sqlrelay.conf  sqlrelay.conf.in  startdbs.sh  startrelays.sh  stopdbs.sh  stoprelays.sh  test.bat  test.in  test.sh  test.sh.in  test.vbs.in  testall.bat.in  testall.sh  testall.sh.in  testall.vbs.in  testdb.mdb
(+3617 files in other folders)
